feat: Add Railway deployment config and dynamic API endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 spring.application.name=OnlineBookStore
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/online_book_store
-spring.datasource.username=postgres
-spring.datasource.password=root
+# Database Configuration - supports both local and cloud deployments
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/online_book_store}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-server.port=8081
+# Server Configuration
+server.port=${SERVER_PORT:8081}
+server.servlet.context-path=/
+
+# Enable CORS for frontend communication
+spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:8000,http://localhost:3000,https://yash-ahire-2004.github.io}
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allow-credentials=true
