--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,33 @@
 spring.application.name=OnlineBookStore
 
-# Database Configuration - supports both local and cloud deployments
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/online_book_store}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+# ===============================
+# DATABASE CONFIG (Railway)
+# ===============================
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?sslmode=require
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
-# Server Configuration
-server.port=${SERVER_PORT:8081}
+# Dialect not required (Hibernate auto-detects)
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ===============================
+# SERVER CONFIG (Railway uses PORT)
+# ===============================
+server.port=${PORT:8081}
 server.servlet.context-path=/
 
-# Enable CORS for frontend communication
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:8000,http://localhost:3000,https://yash-ahire-2004.github.io}
+# ===============================
+# CORS CONFIG (optional)
+# ===============================
+spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:8000,https://yash-ahire-204.github.io}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allow-credentials=true
